--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,24 @@
   padding: 0;
   
 }
+html {
+  height: 100%;;
+}
 
 /* LOGIN PAGE / REGISTRATION PAGE (index.html) - Rika */
 /* START */
 /* ---------------------------------------------- */
 
-.wrapper {
-  height: auto;
-  width: auto;
-}
+
 
 body{
   background-color: rgb(226, 226, 226);
 
 }
-#wrapper {
+/* #wrapper {
   display: flex;
   flex-direction: column;
-}
+} */
 
 #content {
   display: flex;
@@ -103,22 +103,22 @@ button[type="register"], button[type="login"] {
 /* ---------------------------------------------- */
 
 
-.header_home {
+.header {
   color: white;
-  display: block;
+  display: flex;
   align-items: center;
   justify-content: center;
   background-color: black;
-  position: fixed;
+  
 }
 
 
-
-
 .title_area{
+  display: flex;
+  flex-direction: column;
   padding-right: 50px;
   padding-top: 10px;
-
+  
 }
 
 .upload_area{
@@ -128,9 +128,9 @@ button[type="register"], button[type="login"] {
   
 }
 
-.button {
+.button  {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin: 10px;
   
 }
@@ -155,6 +155,11 @@ textarea[type="description"] {
   resize: none;
 }
 
+textarea[type="description"], input[type="title"]{
+  width: 100%;
+  
+  
+}
 
 
 
@@ -169,7 +174,7 @@ textarea[type="description"] {
 
 .sidebar{
   
-  background-color: gray;
+  
   margin: 0;
   padding: 0;
   width: 200px;
@@ -188,7 +193,7 @@ textarea[type="description"] {
 }
  
 .sidebar a.active {
-  background-color: #04AA6D;
+  background-color: black;
   color: white;
 }
 
@@ -199,9 +204,15 @@ textarea[type="description"] {
 
 div.content {
   margin-left: 200px;
-  padding: 1px 16px;
   height: 1000px;
 }
+
+
+
+.description {
+  overflow: inherit;
+}
+
 
 #content_home {
   display: flex;
@@ -209,5 +220,41 @@ div.content {
   justify-content: center;
   align-items: center;
   background-color: gray;
-  
+  object-fit: contain;
+  overflow: inherit;
+}
+
+
+
+
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {float: left;}
+  div.content {margin-left: 0;}
+
+  #content_home{
+    display: flex;
+    flex-direction: column;
+    
+  }
+  .buttons{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
 }
