--- a/css/style.css
+++ b/css/style.css
@@ -29,16 +29,13 @@ body{
   justify-content: center;
 }
 
-.header_bg{
-  background-color: black;
-}
 
-h1 {
+/* h1 {
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 
 .form-label{
   color: black;
@@ -103,15 +100,30 @@ button[type="register"], button[type="login"] {
 /* ---------------------------------------------- */
 
 
-.header {
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+#header {
+  margin: 0;
+  padding: 0;
+  text-align: center;
   background-color: black;
+  position: fixed;
+  width: 100%;
+  overflow: auto;
+  z-index: 1;
   
+
+  /* margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: black;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+  color: white; */
 }
 
+h1 {
+  color: white;
+}
 
 .title_area{
   display: flex;
@@ -174,7 +186,7 @@ textarea[type="description"], input[type="title"]{
 
 .sidebar{
   
-  
+  top:50px;
   margin: 0;
   padding: 0;
   width: 200px;
@@ -222,6 +234,8 @@ div.content {
   background-color: gray;
   object-fit: contain;
   overflow: inherit;
+  position:relative;
+  top:50px;
 }
 
 
@@ -234,7 +248,7 @@ div.content {
 
 
 
-
+/* SIDE-BAR MEDIAQ START */
 
 @media screen and (max-width: 700px) {
   .sidebar {
@@ -266,3 +280,381 @@ div.content {
     float: none;
   }
 }
+
+
+/* SIDEBAR MEDIAQ END */
+
+/* NEWSFEED CSS START*/
+
+.nscontainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  border: 10px solid gray;
+  background-color: rgb(215, 215, 215);
+  margin-left: 100px;
+  margin-right: 100px;
+  overflow: inherit;
+  position: relative;
+  
+  top:50px;
+
+  /* display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: gray;
+  object-fit: contain;
+  
+  position:relative;
+  top:50px; */
+
+
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  border: 10px solid gray;
+  background-color: rgb(215, 215, 215);
+  
+}
+
+
+
+
+
+img {
+  max-width: 100%;
+  height: auto;
+  border: 3px solid rgb(255, 255, 255);
+}
+
+.picturesize {
+  width: 700px;
+  min-height: auto;
+  max-height: auto;
+  float: left;
+  margin: 3px;
+  padding: 3px;
+}
+
+
+
+
+
+.likes-comment-preview{
+  /* display: flex;
+ align-items: center;
+ padding: 1rem;
+ justify-content: space-between; */
+ 
+ }
+ 
+ .likes-preview{
+   font-size: 16px;
+ 
+ }
+ 
+ .likes-comment-share-icons{
+  /* position: relative;
+  width: 100%;
+  border-top: 1px solid gray;
+  padding: 1rem;
+  display:flex;
+  flex-direction: row;
+  
+  font-size: 20px;
+  color: pink;
+   */
+ 
+ 
+ 
+ }
+
+
+/* NEWSFEED CSS END */
+
+
+/* POST CSS START */
+
+.post-body{
+
+  
+  box-shadow: 2px 2px 12px 0px gray;
+  
+  background: #fff;
+  padding: 1rem;
+  border-radius: 9px
+  
+}
+
+.user-info{
+ position: relative;
+ width: 100%;
+ /* display:flex;
+ flex-direction: row;
+ align-items: stretch;
+ justify-content: space-between; */
+}
+
+h2{
+position: relative;
+display: inline-block;
+
+
+
+
+}
+
+.user-pro-pic{
+position:relative;
+width:50px;
+border-radius: 50px
+
+
+}
+
+
+.date-time{
+position:relative;
+margin-left: 3.5rem;
+
+}
+
+.description{
+  position: relative;
+  padding:0.5rem;
+
+}
+
+.upload-img{
+  position: relative;
+  width: 100%;
+
+}
+
+.likes-comment-preview{
+display: flex;
+align-items: center;
+padding: 1rem;
+justify-content: space-between;
+
+}
+
+.likes-preview{
+ font-size: 16px;
+
+}
+
+.likes-comment-share-icons{
+position: relative;
+width: 100%;
+border-top: 1px solid gray;
+padding: 1rem;
+display:flex;
+justify-content: space-evenly;
+font-size: 20px;
+color: antiquewhite;
+
+
+
+
+}
+
+
+.pull-right{
+  float:right;
+}
+.pull-left{
+  float:left;
+}
+#fbcomment{
+  background:#fff;
+  border: 1px solid #dddfe2;
+  border-radius: 3px;
+  color: #4b4f56;
+  padding:50px;
+}
+.header_comment{
+    font-size: 14px;
+    overflow: hidden;
+    border-bottom: 1px solid #e9ebee;
+    line-height: 25px;
+    margin-bottom: 24px;
+    padding: 10px 0;
+}
+.sort_title{
+  color: #4b4f56;
+}
+.sort_by{
+  background-color: #f5f6f7;
+  color: #4b4f56;
+  line-height: 22px;
+  cursor: pointer;
+  vertical-align: top;
+  font-size: 12px;
+  font-weight: bold;
+  vertical-align: middle;
+  padding: 4px;
+  justify-content: center;
+  border-radius: 2px;
+  border: 1px solid #ccd0d5;
+}
+.count_comment{
+  font-weight: 600;
+}
+.body_comment{
+    padding: 0 8px;
+    font-size: 14px;
+    display: block;
+    line-height: 25px;
+    word-break: break-word;
+}
+.avatar_comment{
+  display: block;
+}
+.avatar_comment img{
+  height: 48px;
+  width: 48px;
+}
+.box_comment{
+   display: block;
+    position: relative;
+    line-height: 1.358;
+    word-break: break-word;
+    border: 1px solid #d3d6db;
+    word-wrap: break-word;
+    background: #fff;
+    box-sizing: border-box;
+    cursor: text;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 16px;
+   padding: 0;
+}
+.box_comment textarea{
+   min-height: 40px;
+   padding: 12px 8px;
+   width: 100%;
+   border: none;
+   resize: none;
+}
+.box_comment textarea:focus{
+  outline: none !important;
+}
+.box_comment .box_post{
+   border-top: 1px solid #d3d6db;
+    background: #f5f6f7;
+    padding: 8px;
+    display: block;
+    overflow: hidden;
+}
+.box_comment label{
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 11px;
+  color: #90949c;
+  line-height: 22px;
+}
+.box_comment button{
+  margin-left:8px;
+  background-color: #4267b2;
+  border: 1px solid #4267b2;
+  color: #fff;
+  text-decoration: none;
+  line-height: 22px;
+  border-radius: 2px;
+  font-size: 14px;
+  font-weight: bold;
+  position: relative;
+  text-align: center;
+}
+.box_comment button:hover{
+  background-color: #29487d;
+  border-color: #29487d;
+}
+.box_comment .cancel{
+   margin-left:8px;
+   background-color: #f5f6f7;
+   color: #4b4f56;
+   text-decoration: none;
+   line-height: 22px;
+   border-radius: 2px;
+   font-size: 14px;
+   font-weight: bold;
+   position: relative;
+   text-align: center;
+  border-color: #ccd0d5;
+}
+.box_comment .cancel:hover{
+   background-color: #d0d0d0;
+   border-color: #ccd0d5;
+}
+.box_comment img{
+  height:16px;
+  width:16px;
+}
+.box_result{
+  margin-top: 24px;
+}
+.box_result .result_comment h4{
+  font-weight: 600;
+  white-space: nowrap;
+  color: #365899;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 1.358;
+  margin:0;
+}
+.box_result .result_comment{
+  display:block;
+  overflow:hidden;
+  padding: 0;
+}
+.child_replay{
+   border-left: 1px dotted #d3d6db;
+   margin-top: 12px;
+   list-style: none;
+   padding:0 0 0 8px
+}
+.reply_comment{
+   margin:12px 0;
+}
+.box_result .result_comment p{
+  margin: 4px 0;
+  text-align:justify;
+}
+.box_result .result_comment .tools_comment{
+  font-size: 12px;
+  line-height: 1.358;
+}
+.box_result .result_comment .tools_comment a{
+  color: #4267b2;
+  cursor: pointer;
+  text-decoration: none;
+}
+.box_result .result_comment .tools_comment span{
+  color: #90949c;
+}
+.body_comment .show_more{
+  background: #3578e5;
+  border: none;
+  box-sizing: border-box;
+  color: #fff;
+  font-size: 14px;
+  margin-top: 24px;
+  padding: 12px;
+  text-shadow: none;
+  width: 100%;
+  font-weight:bold;
+  position: relative;
+  text-align: center;
+  vertical-align: middle;
+  border-radius: 2px;
+}
+
+
+/* POST CSS END */
