--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+
+
 * {
   margin: 0;
   padding: 0;
@@ -313,6 +316,7 @@ div.content {
   align-items: center;
   
   border: 10px solid gray;
+  border-radius: 10px;
   background-color: rgb(215, 215, 215);
   margin-left: 100px;
   margin-right: 100px;
@@ -353,10 +357,19 @@ img {
   border: 3px solid rgb(255, 255, 255);
 }
 
+.mainpicture {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .picturesize {
   max-width: 600px;
   min-height: 250px;
-  float: left;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
   margin: 3px;
   padding: 3px;
 }
@@ -477,7 +490,7 @@ padding: 1rem;
 display:flex;
 justify-content: space-evenly;
 font-size: 20px;
-color: antiquewhite;
+color: black;
 
 
 
@@ -662,7 +675,7 @@ color: antiquewhite;
   background: #3578e5;
   border: none;
   box-sizing: border-box;
-  color: #fff;
+  color: gray;
   font-size: 14px;
   margin-top: 24px;
   padding: 12px;
@@ -681,10 +694,10 @@ color: antiquewhite;
   max-width: 80%;
   max-height: 80%;
   box-shadow: 2px 2px 12px 0px gray;
-  overflow: hideen;
+  margin: 10px;
   background: #fff;
   padding: 1rem;
-  border-radius: 9px
+  border-radius: 9px;
   
 }
 
@@ -692,3 +705,78 @@ color: antiquewhite;
 
 
 /* POST CSS END */
+
+
+/* .card{
+  border:none
+  
+}
+
+.ellipsis{
+  color: #a09c9c}hr
+  {
+  color: #a09c9c;
+  margin-top: 4px;
+  margin-bottom: 8px
+}
+
+.muted-color{
+  color: #a09c9c;
+  font-size: 13px
+}
+
+
+.icons i{
+  font-size: 25px
+}
+
+.icons .fa-heart{
+  color: red
+}
+
+.icons .fa-smile-o{
+  color: yellow;
+  font-size: 29px
+}
+
+
+.name{
+  font-weight: 600
+}
+
+.comment-text{
+  font-size: 12px
+}
+
+.status small{
+  margin-right: 10px;
+  color: blue
+}
+
+
+.fonts{
+  position: absolute;
+  right: 13px;top:8px;
+  color: #a09c9c;
+}
+
+
+
+.card{
+  box-shadow: 0px 0px 40px 1px rgb(226 224 224);
+  margin-left: 50px;
+  margin-right: 50px;
+  border: 10px solid gray;
+}
+
+.form-control{
+    border-radius: 5px;
+    width: 50%;
+    
+  
+  } */
+
+
+
+
+  
