--- a/css/style.css
+++ b/css/style.css
@@ -311,14 +311,15 @@ div.content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
-  border: 10px solid gray;
-  background-color: rgb(215, 215, 215);
-  margin-left: 100px;
-  margin-right: 100px;
+  max-width: 800px;
+  background-color: rgb(255, 255, 255);
+  margin: auto;
+  padding: 1.25rem;
   overflow: inherit;
   position: relative;
-  
+  border-radius: 1rem;
+  box-shadow: 0px 0px 100px 20px rgb(194, 192, 192);
+
   top:50px;
 
   /* display: flex;
