--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ div.content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 800px;
+  max-width: 1200px;
   background-color: rgb(255, 255, 255);
   margin: auto;
   padding: 1.25rem;
@@ -342,19 +342,9 @@ div.content {
   display: flex;
   flex-direction: column;
   align-items: left;
-  border: 10px solid gray;
-  background-color: rgb(215, 215, 215);
+  /* border: 10px solid gray; */
+  /* background-color: rgb(215, 215, 215); */
   
-}
-
-
-
-
-
-img {
-  max-width: 100%;
-  height: auto;
-  border: 3px solid rgb(255, 255, 255);
 }
 
 .mainpicture {
@@ -365,13 +355,18 @@ img {
 }
 
 .picturesize {
-  max-width: 600px;
-  min-height: 250px;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-  margin: 3px;
-  padding: 3px;
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+}
+
+.picturesize img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  /* margin: 10px 0px; */
+  border: 3px solid rgb(255, 255, 255);
 }
 
 
@@ -417,7 +412,6 @@ img {
 
   
   box-shadow: 2px 2px 12px 0px gray;
-  
   background: #fff;
   padding: 1rem;
   border-radius: 9px
@@ -691,8 +685,8 @@ color: black;
 
 .post-body{
 
-  max-width: 80%;
-  max-height: 80%;
+  max-width: 100%;
+  max-height: 100%;
   box-shadow: 2px 2px 12px 0px gray;
   margin: 10px;
   background: #fff;
