--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ body{
 
 .login_header{
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
@@ -86,6 +87,19 @@ button[type="register"], button[type="login"] {
   margin: 10px;
   margin-top: 20px;
 }
+
+.error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  
+  border-radius: 10px;
+  max-width: 100%;
+  
+  padding: 5px;
+}
+
 
 /* #footer {
   position: absolute;
