--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ div.content {
 }
 
 
-/* ============================================== */
+/* ================== */
 
 /* .profilepicture{
   display: flex;
@@ -489,8 +489,8 @@ justify-content: space-between;
 
 .likes-preview{
  font-size: 16px;
-}
 
+}
 
 .likes-comment-share-icons{
 position: relative;
@@ -789,7 +789,7 @@ color: black;
 
 /* COMMENT SECTION */
 
-textarea{
+/* textarea{
 width: 400px;
 height: 80px;
 background-color: gray;
@@ -827,7 +827,7 @@ button {
   color: gray;
   font-weight: 100;
   
-}
+} */
 /* COMMENT SECTION */
 
   
