index comment css anya pic

--- a/css/style.css
+++ b/css/style.css
@@ -852,7 +852,7 @@ color: black;
 
 /* COMMENT SECTION */
 
-textarea{
+/* textarea{
 width: 400px;
 height: 80px;
 background-color: gray;
@@ -890,7 +890,7 @@ button {
   color: gray;
   font-weight: 100;
   
-}
+} */
 /* COMMENT SECTION */
 
   
