add ajax functio retrive

--- a/css/profile.css
+++ b/css/profile.css
@@ -53,6 +53,12 @@
   
   }
 
+#error-p {
+  color: #842029;
+  background-color: #F8D7DA;
+  width: 100%;
+}
+  
   
   
   @media screen and (max-width: 640px) {
