--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,41 @@ div.content {
 
 /* SIDEBAR MEDIAQ END */
 
+
+
+
+/* ======================== NEWSFEED ========================  */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ======================== NEWSFEED ========================  */
 /* NEWSFEED CSS START*/
 
 .nscontainer {
